--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,25 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.flex-container {
+    display: flex;
+    height: 300px;
+    width: 700px;
+    justify-content: space-between;
+}
+
+div {
+    height: 100px;
+    width: 100px;
+    background-color: #daa520;
+    border-radius: 50%;
+}
+
+div:nth-child(2n) {
+    margin-top: 100px;
+}
+
+div:nth-child(3) {
+    margin-top: 200px;
+}
